test/ill-formed/0070_pointer_member_in_struct_param.c
struct s {
  int *x;
  double y;
};
void f (s a) {}
